# kino_sampling_with_regional_opti

./: README.md
benchmark_data/: 1000ms-3500ms-1wall1.csv  1000ms-3500ms-2wall1.csv  1000ms-3500ms-3wall.csv  1000ms-3500ms-3wall1.csv  1000ms-3500ms-3wall2.csv  100ms-200ms-forest.csv  500ms-1500ms-cave.csv  500ms-1500ms-cave1.csv  cave-acc-all0.csv  cave-initial-acc-known.csv  cave-initial-acc-unknown.csv  cave.csv  cave_convergence-acc0.xls  cave_convergence-heu.xls  cave_convergence.xls  convegence_topo-no-retiming.xls  convegence_topo-retiming-only RO after first found.xls  convegence_topo-retiming-stop RO after first found.xls  convegence_topo-retiming.xls  convergence_forest.xls  convergence_topo.xls  front-end_cave.csv  front-end_forest.csv  front-end_forest1.csv  front-end_wall.csv  tmpC.csv  tmpF.csv  tmpW.csv  topo_convergence.csv  topo_convergence.xls
benchmark_data/convergence/: krrt_forest_noRO.xls  krrt_forest_noRO_noRewire.xls  krrt_forest_noRO_noRewire_noChooseParent.csv  krrt_forest_noRO_noRewire_noChooseParent.xls
benchmark_data/final_sln/: cave-1s.csv  forest-150ms.csv  wall-3s.csv
benchmark_data/first sln time/: time.xls
decision/state_machine/: CMakeLists.txt
mapping/occ_grid/: CMakeLists.txt
planning/bspline_opt/: CMakeLists.txt  package.xml
planning/kino_plan/: CMakeLists.txt  package.xml
planning/poly_opt/: CMakeLists.txt
planning/r3_plan/: CMakeLists.txt  package.xml
planning/r3_plan/include/r3_plan/: a_star_search.h  nanoflann.hpp  node.h  r3_planner.h
planning/r3_plan/src/: a_star_search.cpp  r3_planner.cpp
(+52 files in other folders)
